[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI/Inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/hidden_neuron.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/output_neuron.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/input_neuron.png" type="Texture" id=4]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1030.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="."]
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 250.0
margin_bottom = -5.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Simple" type="Tabs" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="Input Neuron" type="Button" parent="Tabs/Simple"]
margin_left = 11.0
margin_top = 8.0
margin_right = 71.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hidden Neuron" type="Button" parent="Tabs/Simple"]
margin_left = 91.0
margin_top = 8.0
margin_right = 151.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output Neuron" type="Button" parent="Tabs/Simple"]
margin_left = 171.0
margin_top = 8.0
margin_right = 231.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Tabs/Simple/Input Neuron" to="." method="_on_Input_Neuron_pressed"]
[connection signal="pressed" from="Tabs/Simple/Hidden Neuron" to="." method="_on_Hidden_Neuron_pressed"]
[connection signal="pressed" from="Tabs/Simple/Output Neuron" to="." method="_on_Output_Neuron_pressed"]
